--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,98 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/black"
+        android:overScrollMode="never"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+        android:id="@+id/btnNum1"
+        style="@style/number_button_style"
+        android:layout_width="0dp"
+        android:text="1"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnNum2"
+        app:layout_constraintTop_toBottomOf="@id/rvSudokuGrid"/>
+
+    <TextView
+        android:id="@+id/btnNum2"
+        style="@style/number_button_style"
+        android:layout_width="0dp"
+        android:text="2"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toRightOf="@+id/btnNum1"
+        app:layout_constraintRight_toLeftOf="@id/btnNum3"
+        app:layout_constraintTop_toBottomOf="@id/rvSudokuGrid"/>
+
+    <TextView
+        android:id="@+id/btnNum3"
+        style="@style/number_button_style"
+        android:layout_width="0dp"
+        android:text="3"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toRightOf="@+id/btnNum2"
+        app:layout_constraintRight_toLeftOf="@id/btnNum4"
+        app:layout_constraintTop_toBottomOf="@id/rvSudokuGrid"/>
+
+    <TextView
+        android:id="@+id/btnNum4"
+        style="@style/number_button_style"
+        android:layout_width="0dp"
+        android:text="4"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toRightOf="@+id/btnNum3"
+        app:layout_constraintRight_toLeftOf="@id/btnNum5"
+        app:layout_constraintTop_toBottomOf="@id/rvSudokuGrid"/>
+
+    <TextView
+        android:id="@+id/btnNum5"
+        style="@style/number_button_style"
+        android:layout_width="0dp"
+        android:text="5"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toRightOf="@+id/btnNum4"
+        app:layout_constraintRight_toLeftOf="@id/btnNum6"
+        app:layout_constraintTop_toBottomOf="@id/rvSudokuGrid"/>
+
+    <TextView
+        android:id="@+id/btnNum6"
+        style="@style/number_button_style"
+        android:layout_width="0dp"
+        android:text="6"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toRightOf="@+id/btnNum5"
+        app:layout_constraintRight_toLeftOf="@id/btnNum7"
+        app:layout_constraintTop_toBottomOf="@id/rvSudokuGrid"/>
+
+    <TextView
+        android:id="@+id/btnNum7"
+        style="@style/number_button_style"
+        android:layout_width="0dp"
+        android:text="7"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toRightOf="@+id/btnNum6"
+        app:layout_constraintRight_toLeftOf="@id/btnNum8"
+        app:layout_constraintTop_toBottomOf="@id/rvSudokuGrid"/>
+
+    <TextView
+        android:id="@+id/btnNum8"
+        style="@style/number_button_style"
+        android:layout_width="0dp"
+        android:text="8"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toRightOf="@+id/btnNum7"
+        app:layout_constraintRight_toLeftOf="@id/btnNum9"
+        app:layout_constraintTop_toBottomOf="@id/rvSudokuGrid"/>
+
+    <TextView
+        android:id="@+id/btnNum9"
+        style="@style/number_button_style"
+        android:layout_width="0dp"
+        android:text="9"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toRightOf="@+id/btnNum8"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rvSudokuGrid"/>
 </android.support.constraint.ConstraintLayout>
