--- a/app/src/main/res/drawable/selector_btn_number_input.xml
+++ b/app/src/main/res/drawable/selector_btn_number_input.xml
@@ -2,15 +2,16 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <corners android:radius="2dp"/>
-            <stroke android:width="1dp" android:color="@color/colorPrimary"/>
-            <solid android:color="@color/colorPrimary"/>
+            <corners android:radius="1dp"/>
+            <stroke android:width="1dp" android:color="@color/colorPrimaryDark"/>
+            <solid android:color="@color/colorPrimaryDark"/>
         </shape>
     </item>
     <item>
         <shape>
-            <corners android:radius="2dp"/>
-            <stroke android:width="1dp" android:color="@color/colorAccent"/>
+            <corners android:radius="1dp"/>
+            <solid android:color="@color/colorPrimary"/>
+            <stroke android:width="1dp" android:color="@color/colorPrimary"/>
         </shape>
     </item>
 </selector>
