--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/rvSudokuGrid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="2dp"
         android:background="@android:color/black"
         android:overScrollMode="never"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -111,29 +112,9 @@
         android:id="@+id/btnNum0"
         style="@style/number_button_style"
         android:layout_width="0dp"
-        android:text="清除"
+        android:text="X"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintLeft_toRightOf="@+id/btnNum9"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnNum1"/>
-
-    <TextView
-        android:id="@+id/btnAllClear"
-        style="@style/number_button_style"
-        android:layout_width="0dp"
-        android:text="全部清空"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/btnSolve"/>
-
-    <TextView
-        android:id="@+id/btnSolve"
-        style="@style/number_button_style"
-        android:layout_width="0dp"
-        android:text="电脑解题"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintLeft_toRightOf="@id/btnAllClear"
-        app:layout_constraintRight_toRightOf="parent"/>
 </android.support.constraint.ConstraintLayout>
