--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,11 @@
         android:overScrollMode="never"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:itemCount="81"
+        tools:layoutManager="GridLayoutManager"
+        tools:listitem="@layout/item_cell"
+        tools:spanCount="9"/>
 
     <TextView
         android:id="@+id/btnNum1"
