--- a/app/src/main/res/layout/activity_ocr_commit.xml
+++ b/app/src/main/res/layout/activity_ocr_commit.xml
@@ -22,6 +22,7 @@
         android:id="@+id/sample_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
