--- a/app/src/main/res/layout/activity_ocr_commit.xml
+++ b/app/src/main/res/layout/activity_ocr_commit.xml
@@ -37,6 +37,7 @@
         android:id="@+id/btnTakePic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/btn_selector"
         android:text="扫描"
         android:textColor="@android:color/white"
@@ -48,6 +49,7 @@
         android:id="@+id/btnCommit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/btn_selector"
         android:text="提取"
         android:textColor="@android:color/white"
